# voice-ai-android

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: build-apk.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/voiceai/: App.kt
app/src/main/java/com/example/voiceai/api/: ApiClient.kt
app/src/main/java/com/example/voiceai/audio/: AudioPlayer.kt  AudioRecorder.kt  OpusEncoder.kt  WhisperJni.kt
app/src/main/java/com/example/voiceai/ui/: MainActivity.kt  MainScreen.kt  MainViewModel.kt
app/src/main/java/com/example/voiceai/ui/components/: ErrorMessage.kt  InputSection.kt  OutputSection.kt  VoiceAITheme.kt
app/src/main/res/values/: strings.xml  styles.xml
